version/0.12/_sources/api/solver/_autosummary/settings/xy_plot.rst.txt
:orphan:

.. _xy_plot:

xy_plot
=======

.. currentmodule:: ansys.fluent.core.solver.settings_231.xy_plot

.. autoclass:: xy_plot
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

========================================   =============================================

Command                                                                          Summary

========================================   =============================================
:ref:`display <display_1>`                                      Display graphics object.

:ref:`copy <copy_3>`                                               Copy graphics object.

:ref:`add_to_graphics <add_to_graphics>`       Add graphics object to existing graphics.

:ref:`clear_history <clear_history>`                               Clear object history.

========================================   =============================================

.. rubric:: Named object type

:ref:`xy_plot_child <xy_plot_child>`


.. rubric:: Included in:

====================   =================

Parent                           Summary

====================   =================
:ref:`plot <plot_2>`       'plot' child.

====================   =================

